# codial

./: .gitignore  AGENTS.md  PROJECT.md  README.md  RULES.md  draft.md  pyproject.toml
.claude/skills/session-bootstrap/: SKILL.md
codial-discord/: .env.example  README.md  pyproject.toml
codial-discord/codial_discord/: cli.py  command_specs.py  sync_commands.py
codial-discord/codial_discord/app/: core_api_client.py  discord_api_client.py  main.py  routes.py  settings.py
codial-discord/tests/: test_command_specs.py  test_routes_helpers.py  test_security.py
codial-service/: .env.example  README.md  pyproject.toml
codial-service/codial_service/: cli.py
codial-service/codial_service/app/: attachment_ingestor.py  claude_memory_loader.py  codial_rules.py  event_sink.py  main.py  mcp_client.py  mcp_protocol.py  models.py  policy_engine.py  policy_loader.py  routes.py  session_service.py  settings.py  skills_spec.py  store.py  subagent_spec.py  turn_events.py  turn_worker.py  utils.py
codial-service/codial_service/app/providers/: base.py  catalog.py  copilot_auth.py  http_bridge_adapter.py  manager.py  openai_adapter.py  placeholder_adapter.py
codial-service/codial_service/app/tools/: __init__.py  base.py  defaults.py  file_read.py  file_write.py  glob.py  grep.py  hashline.py  hashline_edit.py  registry.py  shell.py  string_replace.py  web_fetch.py
codial-service/codial_service/bootstrap/: __init__.py  container.py  lifespan.py
codial-service/codial_service/modules/: __init__.py
codial-service/codial_service/modules/common/: __init__.py  deps.py
codial-service/codial_service/modules/health/: __init__.py  api.py
codial-service/codial_service/modules/rules/: __init__.py  api.py
codial-service/codial_service/modules/sessions/: __init__.py  api.py  service.py
codial-service/codial_service/modules/turns/: __init__.py  api.py  contracts.py  engine.py  service.py  worker.py
codial-service/docs/: api.md  architecture.md  operations.md
codial-service/tests/: conftest.py  test_attachment_ingestor.py  test_builtin_tools.py  test_claude_memory_loader.py  test_codial_rules.py  test_copilot_auth.py  test_http_bridge_adapter.py  test_mcp_client.py  test_policy_and_provider.py  test_policy_engine.py  test_provider_catalog.py  test_skills_spec.py  test_store.py  test_subagent_spec.py  test_turn_worker.py
libs/common/: errors.py  http_handlers.py  logging.py  retry.py
libs/contracts/: models.py
services/agent_core_api/app/: attachment_ingestor.py  event_sink.py  main.py  mcp_client.py  mcp_protocol.py  models.py  policy_engine.py  policy_loader.py  routes.py  settings.py  skills_spec.py  store.py  turn_worker.py
services/agent_core_api/app/providers/: base.py  http_bridge_adapter.py  manager.py  openai_adapter.py  placeholder_adapter.py
services/agent_core_api/tests/: test_attachment_ingestor.py  test_claude_memory_loader.py  test_http_bridge_adapter.py  test_mcp_client.py  test_policy_and_provider.py  test_policy_engine.py  test_skills_spec.py  test_store.py
services/discord_gateway/app/: core_api_client.py  main.py  routes.py  security.py  session_store.py  settings.py
services/discord_gateway/tests/: test_routes_helpers.py  test_security.py
skills/: session_bootstrap.yaml
