[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "discord-coding-agent"
version = "0.1.0"
description = "Two-server Discord coding agent platform"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "httpx>=0.27.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.3.0",
  "python-multipart>=0.0.9",
  "pynacl>=1.5.0",
  "sqlalchemy>=2.0.30",
  "asyncpg>=0.29.0",
  "redis>=5.0.7",
  "arq>=0.26.0",
  "structlog>=24.2.0",
  "opentelemetry-api>=1.26.0",
  "opentelemetry-sdk>=1.26.0",
  "prometheus-client>=0.20.0",
  "openai>=1.55.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.5.0",
  "mypy>=1.10.0",
  "types-PyYAML>=6.0.12.20250915",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["libs*"]
exclude = ["skills*", "docs*", "tests*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP",
  "N",
  "ANN",
  "ASYNC",
  "C4",
  "PIE",
  "PT",
  "RET",
  "RUF",
  "SIM",
]
ignore = [
  "ANN401",
  "E501",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
disallow_any_generics = true
no_implicit_optional = true
show_error_codes = true
pretty = true
mypy_path = ["codial-service", "codial-discord"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["codial-service/tests", "codial-discord/tests", "libs"]
pythonpath = [".", "codial-service", "codial-discord"]
addopts = "-q --maxfail=1 --disable-warnings --cov=codial_service --cov=codial_discord --cov=libs --cov-report=term-missing"
